[package]
name = "mvc-hike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kd-tree = { version = "0.5.1", features = ["serde", "rayon"] }
las = "0.8.0"
log = "0.4.17"
nalgebra = "0.30"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
typenum = "1.16.0"
viewercloud = {git = "https://github.com/quantumish/viewercloud.git", branch = "master"}
kiss3d = { version = "0.35" }